Add order model.

--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -22,7 +22,7 @@
                 <div class="card">
 
                     <!--Card content-->
-                    <form class="card-body">
+                    <form method="post" class="card-body">
                         <div asp-validation-summary="All" class="error-message"></div>
 
                         <!--Grid row-->
