Add order model data.

--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -102,21 +102,6 @@
                         </div>
 
                         <hr>
-
-                        <div class="d-block my-3">
-                            <div class="custom-control custom-radio">
-                                <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-                                <label class="custom-control-label" for="credit">Credit card</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                                <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-                                <label class="custom-control-label" for="debit">Debit card</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required>
-                                <label class="custom-control-label" for="paypal">Paypal</label>
-                            </div>
-                        </div>
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="cc-name">Name on card</label>
@@ -151,7 +136,7 @@
                             </div>
                         </div>
                         <hr class="mb-4">
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">Submit Order</button>
                     </form>
                 </div>
                 <!--/.Card-->
@@ -202,16 +187,6 @@
                     </li>
                 </ul>
                 <!-- Cart -->
-                <!-- Promo code -->
-                <form class="card p-2">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Promo code" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-secondary btn-md waves-effect m-0" type="button">Redeem</button>
-                        </div>
-                    </div>
-                </form>
-                <!-- Promo code -->
             </div>
             <!--Grid column-->
         </div>
