--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -67,7 +67,7 @@
                             <!--Grid column-->
                             <div class="col-lg-4 col-md-6 mb-4">
 
-                                <label for="state">State</label>
+                                <label asp-for="@Model.Input.State">State</label>
                                 <select class="custom-select d-block w-100" id="state" required>
                                     <option value="">Choose...</option>
                                     <option>California</option>
