Finished milestone 3 user story 1

--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -27,6 +27,9 @@
 
                         <!--Grid row-->
                         <div class="row">
+                            <input hidden asp-for="@Model.Cart.Id" />
+                            <input hidden asp-for="@Model.Cart.UserEmail" />
+                            <input hidden asp-for="@Model.Cart.IsActive" />
 
                             <!--Grid column-->
                             <div class="col-md-6 mb-2">
