Make anonymous users not share the same cart. (used cookies).

--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ECommerce.Pages.ProductsModel
+@model ECommerce.Pages.HomeModel
 @{
     ViewData["Title"] = "Home";
     Layout = "_Layout";
