--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -151,42 +151,33 @@
                 <!-- Heading -->
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
                     <span class="text-muted">Your cart</span>
-                    <span class="badge badge-secondary badge-pill">3</span>
+                    @{
+                        int qty = 0;
+                        foreach (var item in Model.Cart.CartItem)
+                            qty += item.Quantity;
+                    }
+                    <span class="badge badge-secondary badge-pill">@qty</span>
                 </h4>
 
                 <!-- Cart -->
                 <ul class="list-group mb-3 z-depth-1">
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Product name</h6>
-                            <small class="text-muted">Brief description</small>
-                        </div>
-                        <span class="text-muted">$12</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Second product</h6>
-                            <small class="text-muted">Brief description</small>
-                        </div>
-                        <span class="text-muted">$8</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Third item</h6>
-                            <small class="text-muted">Brief description</small>
-                        </div>
-                        <span class="text-muted">$5</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
-                            <h6 class="my-0">Promo code</h6>
-                            <small>EXAMPLECODE</small>
-                        </div>
-                        <span class="text-success">-$5</span>
-                    </li>
+                    @foreach (var item in Model.Cart.CartItem)
+                    {
+                        decimal itemTotal = item.Quantity * item.Product.Price;
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0">
+                                    @item.Product.Name
+                                    <small class="text-muted">(@item.Quantity)</small>
+                                </h6>
+                            </div>
+                            <span class="text-muted">@string.Format("{0:C}", itemTotal)</span>
+                        </li>
+
+                    }
                     <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
+                        <span>Total</span>
+                        <strong>@string.Format("{0:C}", Model.Cart.Total)</strong>
                     </li>
                 </ul>
                 <!-- Cart -->
