--- a/ECommerce/ECommerce/Pages/Checkout/OrderSummary.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/OrderSummary.cshtml
@@ -5,21 +5,88 @@
     Layout = "_Layout";
 }
 
-<h1>Order Summary</h1>
-<p>@Model.Order.FirstName</p>
-<p>@Model.Order.LastName</p>
-<p>@Model.Order.Address</p>
-<p>@Model.Order.City</p>
-<p>@Model.Order.State</p>
-<p>@Model.Order.Zip</p>
+<div class="container">
+    <div class="card">
+        <div class="card-header">
+            Invoice
+            <strong>01/01/01/2018</strong>
+            <span class="float-right"> <strong>Status:</strong> Pending</span>
+        </div>
+        <div class="card-body">
+            <div class="row mb-4">
+                <div class="col-sm-6">
+                    <h6 class="mb-3">To:</h6>
+                    <div>
+                        <strong>
+                            @($"{Model.Order.FirstName} {Model.Order.LastName}")
+                        </strong>
+                    </div>
+                    <div>@Model.Order.Address</div>
+                    <div>
+                        @($"{Model.Order.City} {Model.Order.State} {Model.Order.Zip}")
+                    </div>
+                    <div>@Model.Order.Email</div>
+                </div>
+            </div>
 
-@foreach (var item in Model.Order.Cart.CartItem)
-{
+            <div class="table-responsive-sm">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th class="center">#</th>
+                            <th>Item</th>
+                            <th>Description</th>
 
-    <p>@item.Product.Name</p>
-    <img height="150" width="150" src=@item.Product.Image />
-    <p>@item.Product.Price</p>
-    <p>@item.Product.Description</p>
-}
+                            <th class="right">Unit Cost</th>
+                            <th class="center">Qty</th>
+                            <th class="right">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            int counter = 0;
+                            decimal total = 0.0M;
+                            foreach (var item in Model.Order.Cart.CartItem)
+                            {
+                                total += item.Product.Price * item.Quantity;
+                                counter++;
+                                <tr>
+                                    <td class="center">@counter</td>
+                                    <td class="left">@item.Product.Name</td>
+                                    <td class="left">@item.Product.Description</td>
+
+                                    <td class="right">@item.Product.Price</td>
+                                    <td class="right">@item.Quantity</td>
+                                    <td>@string.Format("{0:C}", total)</td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-5">
+                </div>
+
+                <div class="col-lg-4 col-sm-5 ml-auto">
+                    <table class="table table-clear">
+                        <tbody>
+                            <tr>
+                                <td class="left">
+                                    <strong>Total</strong>
+                                </td>
+                                <td class="right">
+                                    <strong>
+                                        @string.Format("{0:C}", Model.Order.Cart.Total)
+                                    </strong>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <a asp-page="../Index">Return to Home Page</a>
