--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -46,7 +46,7 @@
                                 <form method="post">
                                     <input hidden asp-for="CartId" value="@item.CartId" />
                                     <input hidden asp-for="ProductId" value="@item.ProductId" />
-                                    <input id="update-field" asp-for="Count" value="@item.Quantity" />
+                                    <input id="update-field" type="number" min="1" asp-for="Count" value="@item.Quantity" />
                                     <button class="btn btn-primary" asp-page="/ShoppingCart/Update" type="submit">
                                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-repeat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L2.5 8.207l1.646 1.647a.5.5 0 0 0 .708-.708l-2-2zm13-1a.5.5 0 0 0-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0 0-.708z" />
