Style product landing page.

--- a/ECommerce/ECommerce/Pages/Checkout/OrderSummary.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/OrderSummary.cshtml
@@ -9,7 +9,7 @@
     <div class="card">
         <div class="card-header">
             Invoice
-            <strong>@DateTime.Now.ToShortDateString();</strong>
+            <strong>@DateTime.Now.ToShortDateString()</strong>
             <span class="float-right"> <strong>Status:</strong> Pending</span>
         </div>
         <div class="card-body">
