--- a/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
+++ b/ECommerce/ECommerce/Pages/Checkout/Checkout.cshtml
@@ -172,42 +172,41 @@
             </div>
             <!--Grid column-->
             <!--Grid column-->
-            <div class="col-md-4 mb-4">
-
-                <!-- Heading -->
-                <h4 class="d-flex justify-content-between align-items-center mb-3">
-                    <span class="text-muted">Your cart</span>
-                    @{
-                        int qty = 0;
-                        foreach (var item in Model.Cart.CartItem)
-                            qty += item.Quantity;
-                    }
-                    <span class="badge badge-secondary badge-pill">@qty</span>
-                </h4>
-
-                <!-- Cart -->
-                <ul class="list-group mb-3 z-depth-1">
-                    @foreach (var item in Model.Cart.CartItem)
-                    {
-                        decimal itemTotal = item.Quantity * item.Product.Price;
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="my-0">
-                                    @item.Product.Name
-                                    <small class="text-muted">(@item.Quantity)</small>
-                                </h6>
-                            </div>
-                            <span class="text-muted">@string.Format("{0:C}", itemTotal)</span>
-                        </li>
-
-                    }
-                    <li class="list-group-item d-flex justify-content-between">
-                        <span>Total</span>
-                        <strong>@string.Format("{0:C}", Model.Cart.Total)</strong>
+            <!--<div class="col-md-4 mb-4">-->
+            <!-- Heading -->
+            <!--<h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span class="text-muted">Your cart</span>
+                @{
+                    int qty = 0;
+                    foreach (var item in Model.Cart.CartItem)
+                        qty += item.Quantity;
+                }
+                <span class="badge badge-secondary badge-pill">@qty</span>
+            </h4>-->
+            <!-- Cart -->
+            <!--<ul class="list-group mb-3 z-depth-1">
+                @foreach (var item in Model.Cart.CartItem)
+                {
+                    decimal itemTotal = item.Quantity * item.Product.Price;
+                    <li class="list-group-item d-flex justify-content-between lh-condensed">
+                        <div>
+                            <h6 class="my-0">
+                                @item.Product.Name
+                                <small class="text-muted">(@item.Quantity)</small>
+                            </h6>
+                        </div>
+                        <span class="text-muted">@string.Format("{0:C}", itemTotal)</span>
                     </li>
-                </ul>
-                <!-- Cart -->
-            </div>
+
+                }
+                <li class="list-group-item d-flex justify-content-between">
+                    <span>Total</span>
+                    <strong>@string.Format("{0:C}", Model.Cart.Total)</strong>
+                </li>
+            </ul>-->
+            <!-- Cart -->
+            <!--</div>-->
+            @await Component.InvokeAsync("ShoppingCart")
             <!--Grid column-->
         </div>
         <!--Grid row-->
