--- a/ECommerce/ECommerce/Pages/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/Index.cshtml
@@ -12,44 +12,145 @@
         main {
             margin-bottom: 150px;
         }
+
+        #shop-by-list button {
+            width: 100%;
+            color: #6A6A6A;
+        }
+
+            #shop-by-list button:hover {
+                color: black;
+            }
     </style>
     <title>Products</title>
 </head>
-<body>
-    <main id="products-main">
+@*<body>
+        <main id="products-main">
 
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Price</th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody>
-                @{int count = 1; }
-                @foreach (var item in Model.Products)
-                {
-                <tr>
-                    <td scope="row">@count</td>
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @string.Format("{0:C}", item.Price)
-                    </td>
-                    <td>
-                        <img width="200" height="150" src=@item.Image />
-                    </td>
-                    <td>
-                        <a asp-page="ProductDetails" asp-route-id="@item.Id">Details</a>
-                    </td>
-                </tr>
-                    count++;
-                }
-            </tbody>
-        </table>
-    </main>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @{int count = 1; }
+                    @foreach (var item in Model.Products)
+                    {
+                        <tr>
+                            <td scope="row">@count</td>
+                            <td>
+                                @item.Name
+                            </td>
+                            <td>
+                                @string.Format("{0:C}", item.Price)
+                            </td>
+                            <td>
+                                <img width="200" height="150" src=@item.Image />
+                            </td>
+                            <td>
+                                <a asp-page="ProductDetails" asp-route-id="@item.Id">Details</a>
+                            </td>
+                        </tr>
+                        count++;
+                    }
+                </tbody>
+            </table>
+        </main>
+    </body>*@
+
+<body>
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-3">
+
+                <h1 class="my-4">Shop Brand</h1>
+                <div id="shop-by-list" class="list-group">
+                    <form method="post">
+                        <input hidden asp-for="@Model.Term" value="" />
+                        <button class="list-group-item" asp-page="/Products/Index" type="submit">All</button>
+                    </form>
+                    <form method="post">
+                        <input hidden asp-for="@Model.Term" value="ryzen" />
+                        <button class="list-group-item" asp-page="/Products/Index" type="submit">Ryzen</button>
+                    </form>
+                    <form method="post">
+                        <input hidden asp-for="@Model.Term" value="intel" />
+                        <button class="list-group-item" asp-page="/Products/Index" type="submit">Intel</button>
+                    </form>
+                    <form method="post">
+                        <input hidden asp-for="@Model.Term" value="asus" />
+                        <button class="list-group-item" asp-page="/Products/Index" type="submit">Asus</button>
+                    </form>
+                </div>
+            </div>
+            <!-- /.col-lg-3 -->
+
+            <div class="col-lg-9">
+
+                <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+                <div class="row">
+                    @{
+                        foreach (var item in Model.Products)
+                        {
+                            <div class="col-lg-4 col-md-6 mb-4">
+                                <div class="card h-100">
+                                    <a href="#"><img class="card-img-top" src=@item.Image alt=""></a>
+                                    <div class="card-body">
+                                        <h4 class="card-title">
+                                            <a href="#">@item.Name</a>
+                                        </h4>
+                                        <h5>@string.Format("{0:C}", item.Price)</h5>
+                                        <p class="card-text">@item.Description</p>
+                                    </div>
+                                    <div class="card-footer">
+                                        <small class="text-muted">
+                                            <a asp-page="ProductDetails" asp-route-id="@item.Id">Details</a>
+                                        </small>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.col-lg-9 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
 </body>
 </html>
