--- a/ECommerce/ECommerce/Pages/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/Index.cshtml
@@ -21,6 +21,11 @@
             #shop-by-list button:hover {
                 color: black;
             }
+
+        #carousel img {
+            height: 350px;
+            width: 900px;
+        }
     </style>
     <title>Products</title>
 </head>
@@ -100,15 +105,15 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     </ol>
-                    <div class="carousel-inner" role="listbox">
+                    <div id="carousel" class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                            <img class="d-block img-fluid" src="https://ecom17.blob.core.windows.net/pictures/slider-1.jpg" width="900" height="100" alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                            <img class="d-block img-fluid" src="https://ecom17.blob.core.windows.net/pictures/slider-2.jpg" width="900" height="100" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                            <img class="d-block img-fluid" src="https://ecom17.blob.core.windows.net/pictures/slider-3.jpg" width="900" height="100" alt="Third slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
