Move hero image to azure blob storage.

--- a/ECommerce/ECommerce/wwwroot/Styles/Home.css
+++ b/ECommerce/ECommerce/wwwroot/Styles/Home.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-image: url("../Images/cpu2.jpg");
+    background-image: url("https://ecom17.blob.core.windows.net/pictures/hero.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
