--- a/ECommerce/ECommerce/Pages/Shared/_Header.cshtml
+++ b/ECommerce/ECommerce/Pages/Shared/_Header.cshtml
@@ -38,10 +38,16 @@
                     </li>
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        if (User.Claims.FirstOrDefault(x => x.Type == "Fullname") != null)
+                        if (User.Claims.FirstOrDefault(x => x.Type == "FirstName") != null)
                         {
                             <li class="nav-item" id="welcome-user">
-                                <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "Fullname").Value </a>
+                                <a class="nav-link disabled">Welcome @User.Claims.First(x => x.Type == "FirstName").Value </a>
+                            </li>
+                        }
+                        if (User.Identity.Name == "Andrew149@gmail.com")
+                        {
+                            <li class="nav-item">
+                                <a asp-page="/dashboard/Index" class="nav-link">Dashboard</a>
                             </li>
                         }
                         <li class="nav-item">
