--- a/ECommerce/ECommerce/Pages/Shared/_Footer.cshtml
+++ b/ECommerce/ECommerce/Pages/Shared/_Footer.cshtml
@@ -1,2 +1,5 @@
 ﻿<footer id="sticky-footer" class="py-4 bg-dark text-white-50" style="position: fixed; bottom: 0; width: 100%;">
+    <div class="footer-copyright text-center py-3">
+        © 2020 Copyright: PC-Actual
+    </div>
 </footer>
