--- a/ECommerce/ECommerce/wwwroot/Styles/Home.css
+++ b/ECommerce/ECommerce/wwwroot/Styles/Home.css
@@ -1,7 +1,8 @@
-﻿body {
-    background-image: url("https://ecom17.blob.core.windows.net/pictures/hero.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: 20%;
-}
+﻿/*body {*/
+/*    background-image: url("https://ecom17.blob.core.windows.net/pictures/hero.jpg");*/
+/*background-image: url("../Images/home-header.jpg");
+    background-repeat: no-repeat;*/
+/*    background-size: cover;*/
+/*background-attachment: fixed;
+    background-position: top;
+}*/
