--- a/ECommerce/ECommerce/Pages/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/Index.cshtml
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="card-footer">
                                         <small class="text-muted">
-                                            <a asp-page="ProductDetails" asp-route-id="@item.Id">Details</a>
+                                            <a asp-page="ProductDetails" asp-route-id="@item.Id">View</a>
                                         </small>
                                     </div>
                                 </div>
