Add increment and decrement features.

--- a/ECommerce/ECommerce/wwwroot/Styles/All.css
+++ b/ECommerce/ECommerce/wwwroot/Styles/All.css
@@ -28,6 +28,11 @@
         color: black;
     }
 
+#bootstrap-override .products img {
+    height: 300px;
+}
+}
+
 #bootstrap-override #carousel img {
     height: 350px;
     width: 900px;
