--- a/ECommerce/ECommerce/Pages/Products/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Products/Index.cshtml
@@ -12,6 +12,10 @@
         main {
             margin-bottom: 150px;
         }
+
+        .products img {
+            height: 200px;
+        }
     </style>
     <title>Products</title>
 </head>
@@ -23,7 +27,7 @@
 
             <div class="col-lg-3">
 
-                <h1 class="my-4">Shop Brand</h1>
+                <h5 class="my-4">Shop Brand</h5>
                 <div id="shop-by-list" class="list-group">
                     <form method="post">
                         <input hidden asp-for="@Model.Term" value="" />
@@ -87,7 +91,7 @@
                         foreach (var item in Model.Products)
                         {
                             <div class="col-lg-4 col-md-6 mb-4">
-                                <div class="card h-100">
+                                <div class="products card h-100">
                                     <a href="#"><img class="card-img-top" src=@item.Image alt="img"></a>
                                     <div class="card-body">
                                         <h4 class="card-title">
