--- a/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/ShoppingCart/Index.cshtml
@@ -18,6 +18,12 @@
         .plus-minus {
             display: inline-flex;
         }
+
+        input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
     </style>
     <title>Shopping Cart</title>
 </head>
@@ -111,7 +117,7 @@
                                                     <input hidden asp-for="CartId" value="@item.CartId" />
                                                     <input hidden asp-for="ProductId" value="@item.ProductId" />
                                                     <input type="submit" value="-" asp-page="/ShoppingCart/DecrementQty" class="minus">
-                                                    <input type="number" step="1" max="99" min="1" asp-for="Count" value="@item.Quantity" title="Qty" class="qty"
+                                                    <input step="1" max="99" min="1" asp-for="Count" value="@item.Quantity" title="Qty" class="qty"
                                                            size="4">
                                                     <input type="submit" asp-page="/ShoppingCart/IncrementQty" value="+" class="plus">
                                                 </div>
