--- a/ECommerce/ECommerce/Pages/Index.cshtml
+++ b/ECommerce/ECommerce/Pages/Index.cshtml
@@ -24,7 +24,7 @@
 </head>
 <body>
     <main>
-        <img src="~/Images/home-header.jpg" />
+        <img src="~/Images/header-2.jpg" />
         <section class="pt-5 pb-5">
             <div class="container">
                 <h2 class="text-center font-weight-bold mb-5 mt-5">Featured Products</h2>
